# uniswap-v3-performance

./: .gitignore  Procfile  README.md  TODO  api.py  app.py  config.defaults.yaml  database_feeder.py  gunicorn.conf.py  gunicorn_config.py  pyproject.toml  requirements.txt
database/: __init__.py  collection_endpoint.py  collection_returns.py  collection_static.py  collections_common.py  db_data_format.py  db_data_models.py  db_feeds.py  db_managers.py  db_queries.py
database/common/: __init__.py  collections_common.py  db_data_models.py  db_managers.py
dbdata/: __init__.py  db_managers.py
local_debug_work/: .~lock.impermanent_mainnet_uniswap_v3_16255752_16305878.csv#  impermanent_formulas.ods  impermanent_mainnet_uniswap_v3_16232903_16283052.csv  impermanent_mainnet_uniswap_v3_16255752_16305878.csv  test.py
tests/: test_custom.py  test_database.py  test_endpoints.py  test_impermanent.py  test_users.py  test_utils.py  test_visor.py  test_visr.py
tests/data/: visr_30days.json  visr_6days.json
v3data/: __init__.py  abi.py  accounts.py  api.py  app.py  bollingerbands.py  config.py  constants.py  daily.py  dashboard.py  data.py  enums.py  eth.py  factory.py  gamma.py  hypervisor.py  masterchef.py  masterchef_v2.py  pools.py  pricing.py  rewardshypervisor.py  schema.py  simulator.py  strategies.py  toplevel.py  users.py  utils.py  visor.py  visr.py  xgamma.py
v3data/charts/: __init__.py  base_range.py  benchmark.py  config.py  daily.py
v3data/common/: __init__.py  aggregate_stats.py  analytics.py  charts.py  hypervisor.py  masterchef.py  masterchef_v2.py  (+2 more)
(+39 files in other folders)
